<resources>
    <string name="app_name">Uber</string>
    <string name="btn_driver">"I'm Driver"</string>
    <string name="btn_customer">"I'm Customer"</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="editText_email_hint">Please enter email here</string>
    <string name="editText_password_hint">Please enter password here</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_setting">Settings</string>
    <string name="btn_requestUber">Call Uber</string>
    <string name="btn_cancelRequestUber">Cancel Request</string>

    <!--Profile Info-->
    <string name="customer_name">Customer Name here</string>
    <string name="customer_destination">Customer Destination here</string>
    <!--Settings-->
    <string name="editText_username">Customer Name here</string>
    <string name="editText_user_phoneno">Customer Phone number here</string>
    <string name="editText_car">Car info here</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>


    <!--maps-->
    <string name="title_activity_driver_map">Map</string>
    <!--Errors-->
    <string name="signup_error">Signup Error: Something went wrong!</string>
    <string name="signin_error">Signin Error: Something went wrong!</string>
    <string name="title_activity_customer_map">Map</string>

</resources>
