<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLoginActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_email_hint"/>

    <EditText
        android:id="@+id/editText_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_password_hint"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"/>
</LinearLayout>