<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerSettingActivity">

    <ImageView
        android:id="@+id/imageView_userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/editText_users_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@null"
        android:hint="@string/editText_username" />


    <EditText
        android:id="@+id/editText_user_phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@null"
        android:hint="@string/editText_user_phoneno"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@null"
        android:hint="@string/editText_car" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/UberX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UberX" />

        <RadioButton
            android:id="@+id/UberGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UberGo" />

        <RadioButton
            android:id="@+id/UberXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UberXL" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />
    </LinearLayout>
</LinearLayout>